Fixed second solution. Added baseline and extra solution for first and second tasks. Added timings

--- a/Numpy_training.ipynb
+++ b/Numpy_training.ipynb
@@ -2,25 +2,58 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "edbb78ed-8c1e-4c02-8fb1-08f81b34eb71",
+   "execution_count": 4,
+   "id": "1cf0cd26-da73-402c-b489-f7c5a6c06f44",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:09:52.901321Z",
-     "iopub.status.busy": "2023-07-17T08:09:52.900051Z",
-     "iopub.status.idle": "2023-07-17T08:09:53.548285Z",
-     "shell.execute_reply": "2023-07-17T08:09:53.547153Z",
-     "shell.execute_reply.started": "2023-07-17T08:09:52.901261Z"
+     "iopub.execute_input": "2023-07-20T07:50:56.071305Z",
+     "iopub.status.busy": "2023-07-20T07:50:56.069842Z",
+     "iopub.status.idle": "2023-07-20T07:50:56.111262Z",
+     "shell.execute_reply": "2023-07-20T07:50:56.109641Z",
+     "shell.execute_reply.started": "2023-07-20T07:50:56.071222Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "%load_ext autoreload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "edbb78ed-8c1e-4c02-8fb1-08f81b34eb71",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:30:58.446383Z",
+     "iopub.status.busy": "2023-07-20T08:30:58.446024Z",
+     "iopub.status.idle": "2023-07-20T08:30:58.503146Z",
+     "shell.execute_reply": "2023-07-20T08:30:58.501808Z",
+     "shell.execute_reply.started": "2023-07-20T08:30:58.446340Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%autoreload\n",
     "import numpy as np\n",
+    "import os\n",
+    "import numexpr as ne\n",
     "import numpy.ma as ma\n",
     "from numba import njit\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import display"
+    "from IPython.display import display\n",
+    "\n",
+    "from Task_from_starters import first_task_baseline\n",
+    "from Task_from_starters import first_task_baseline_numba\n",
+    "from Task_from_starters import first_task\n",
+    "\n",
+    "from Task_from_starters import second_task_baseline\n",
+    "from Task_from_starters import second_task_v1\n",
+    "from Task_from_starters import second_task_v2\n",
+    "from Task_from_starters import second_task_via_distance\n",
+    "from Task_from_starters import second_task_numpy\n",
+    "from Task_from_starters import _create_blocks"
    ]
   },
   {
@@ -4988,58 +5021,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "54c22fc4-d370-4783-9d7c-dec11c071f5f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-17T07:56:11.065778Z",
-     "iopub.status.busy": "2023-07-17T07:56:11.065235Z",
-     "iopub.status.idle": "2023-07-17T07:56:14.232816Z",
-     "shell.execute_reply": "2023-07-17T07:56:14.230957Z",
-     "shell.execute_reply.started": "2023-07-17T07:56:11.065751Z"
-    },
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numexpr in /root/.pyenv/versions/3.8.16/lib/python3.8/site-packages (2.8.4)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in /root/.pyenv/versions/3.8.16/lib/python3.8/site-packages (from numexpr) (1.24.3)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
-    "!pip install --upgrade numexpr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d7ff5d0d-e9d5-42e8-bbce-a282eaf75c4e",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-17T07:56:14.236573Z",
-     "iopub.status.busy": "2023-07-17T07:56:14.236003Z",
-     "iopub.status.idle": "2023-07-17T07:56:14.251984Z",
-     "shell.execute_reply": "2023-07-17T07:56:14.250354Z",
-     "shell.execute_reply.started": "2023-07-17T07:56:14.236519Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "os.environ['NUMEXPR_MAX_THREADS'] = '16'\n",
-    "os.environ['NUMEXPR_NUM_THREADS'] = '8'\n",
-    "import numexpr as ne"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "5e320c40-cf1b-48b4-a9c7-a7484ec47a2d",
    "metadata": {},
@@ -5049,15 +5030,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "ba465d62-8613-4835-99d6-77ca11fd5653",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:09:57.342167Z",
-     "iopub.status.busy": "2023-07-17T08:09:57.341773Z",
-     "iopub.status.idle": "2023-07-17T08:09:57.349593Z",
-     "shell.execute_reply": "2023-07-17T08:09:57.348506Z",
-     "shell.execute_reply.started": "2023-07-17T08:09:57.342142Z"
+     "iopub.execute_input": "2023-07-20T08:06:59.131071Z",
+     "iopub.status.busy": "2023-07-20T08:06:59.130791Z",
+     "iopub.status.idle": "2023-07-20T08:06:59.139516Z",
+     "shell.execute_reply": "2023-07-20T08:06:59.138483Z",
+     "shell.execute_reply.started": "2023-07-20T08:06:59.131041Z"
     },
     "tags": []
    },
@@ -5074,105 +5055,94 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f1ab488-415a-4d9a-931f-9b8a9ec5b870",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "### Baseline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "a217fe85-832d-4a7b-ab8f-e33cf8cb96a3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-17T08:09:58.981249Z",
-     "iopub.status.busy": "2023-07-17T08:09:58.980030Z",
-     "iopub.status.idle": "2023-07-17T08:09:58.988386Z",
-     "shell.execute_reply": "2023-07-17T08:09:58.986583Z",
-     "shell.execute_reply.started": "2023-07-17T08:09:58.981201Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def corr(first, second):\n",
-    "    return ((first*second).mean() - first.mean() * second.mean()) / (first.std()*second.std())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "6bd5f932-417c-46df-8e6c-88ef34177093",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-17T08:09:59.710848Z",
-     "iopub.status.busy": "2023-07-17T08:09:59.709610Z",
-     "iopub.status.idle": "2023-07-17T08:09:59.721843Z",
-     "shell.execute_reply": "2023-07-17T08:09:59.720009Z",
-     "shell.execute_reply.started": "2023-07-17T08:09:59.710790Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def corr_baseline(A, B):\n",
-    "    X,Y,Z = A.shape\n",
-    "    N, Z = B.shape\n",
-    "    corr_matrix = np.empty((X, Y))\n",
-    "\n",
-    "    for ij in np.ndindex(A.shape[:2]):\n",
-    "        A_trace = A[ij]\n",
-    "        sum_ = 0\n",
-    "        for B_trace in B:\n",
-    "            sum_ += corr(A_trace, B_trace)\n",
-    "        corr_matrix[ij] = sum_/B.shape[0]\n",
-    "    return corr_matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "50f0860d-5aa2-4b19-a903-eb931f5f01b5",
+   "id": "a8db6e18-9bd3-4ce5-afaa-03b4e6960e53",
    "metadata": {},
    "source": [
-    "### Solution"
+    "## Timings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ddb80db1-a42e-4c95-a840-7a74bd4b89c9",
+   "execution_count": 22,
+   "id": "66c8b754-d742-4213-b6a3-e38b02cab6aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:10:01.460500Z",
-     "iopub.status.busy": "2023-07-17T08:10:01.459926Z",
-     "iopub.status.idle": "2023-07-17T08:10:13.430677Z",
-     "shell.execute_reply": "2023-07-17T08:10:13.429835Z",
-     "shell.execute_reply.started": "2023-07-17T08:10:01.460445Z"
+     "iopub.execute_input": "2023-07-20T08:15:19.727585Z",
+     "iopub.status.busy": "2023-07-20T08:15:19.727175Z",
+     "iopub.status.idle": "2023-07-20T08:15:22.638305Z",
+     "shell.execute_reply": "2023-07-20T08:15:22.637495Z",
+     "shell.execute_reply.started": "2023-07-20T08:15:19.727563Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.57 ms ± 33.5 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
     }
    ],
    "source": [
-    "from Task_from_starters import first_task\n",
-    "\n",
-    "baseline_result = corr_baseline(A, B)\n",
-    "my_result = first_task(A, B)\n",
-    "\n",
-    "(baseline_result.round(10) == my_result.round(10)).all()"
+    "%%timeit # Tested on (X,Y) = (100,100) because baseline works really slow\n",
+    "first_task(A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ce5c59c7-ec9a-42b7-bd29-f9be597e8ab3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:07:48.407382Z",
+     "iopub.status.busy": "2023-07-20T08:07:48.407084Z",
+     "iopub.status.idle": "2023-07-20T08:09:07.658442Z",
+     "shell.execute_reply": "2023-07-20T08:09:07.657337Z",
+     "shell.execute_reply.started": "2023-07-20T08:07:48.407357Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.87 s ± 268 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "first_task_baseline(A, B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1151d93c-fd68-4d98-bd56-08ff730c079a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:15:04.234053Z",
+     "iopub.status.busy": "2023-07-20T08:15:04.233625Z",
+     "iopub.status.idle": "2023-07-20T08:15:09.186178Z",
+     "shell.execute_reply": "2023-07-20T08:15:09.185178Z",
+     "shell.execute_reply.started": "2023-07-20T08:15:04.234029Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61 ms ± 53.5 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "first_task_baseline_numba(A, B)"
    ]
   },
   {
@@ -5187,15 +5157,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "id": "a59c79b0-700f-47b0-aab9-fee08c7ed451",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:10:13.433019Z",
-     "iopub.status.busy": "2023-07-17T08:10:13.432376Z",
-     "iopub.status.idle": "2023-07-17T08:10:13.693875Z",
-     "shell.execute_reply": "2023-07-17T08:10:13.692802Z",
-     "shell.execute_reply.started": "2023-07-17T08:10:13.432989Z"
+     "iopub.execute_input": "2023-07-20T08:17:18.665506Z",
+     "iopub.status.busy": "2023-07-20T08:17:18.664949Z",
+     "iopub.status.idle": "2023-07-20T08:17:19.012506Z",
+     "shell.execute_reply": "2023-07-20T08:17:19.010984Z",
+     "shell.execute_reply.started": "2023-07-20T08:17:18.665455Z"
     },
     "tags": []
    },
@@ -5210,87 +5180,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2362d880-a9ac-45b1-bfdd-bfb4533a7e3a",
-   "metadata": {},
-   "source": [
-    "### Baseline"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "89f18a25-288f-4829-81a0-ee527b555b3b",
+   "execution_count": 98,
+   "id": "3fa23610-2ede-4c80-9581-505d45b41616",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:10:45.987510Z",
-     "iopub.status.busy": "2023-07-17T08:10:45.987102Z",
-     "iopub.status.idle": "2023-07-17T08:10:45.994700Z",
-     "shell.execute_reply": "2023-07-17T08:10:45.993421Z",
-     "shell.execute_reply.started": "2023-07-17T08:10:45.987486Z"
+     "iopub.execute_input": "2023-07-19T15:41:12.914943Z",
+     "iopub.status.busy": "2023-07-19T15:41:12.914364Z",
+     "iopub.status.idle": "2023-07-19T15:41:12.923805Z",
+     "shell.execute_reply": "2023-07-19T15:41:12.922201Z",
+     "shell.execute_reply.started": "2023-07-19T15:41:12.914890Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
-    "def create_blocks(A, K):\n",
-    "    \"\"\"\n",
-    "    Creates K x K x Z blocks from original array, and reshapes it into K^2 x Z blocks\n",
+    "X = 5\n",
+    "Y = 5\n",
+    "Z = 4\n",
+    "K = 3\n",
     "\n",
-    "    Returns:\n",
-    "        array of shape: (n_blocks, K^2, Z)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    itemsize = A.itemsize\n",
-    "    X, Y, Z = A.shape\n",
-    "\n",
-    "    BATCH_SIZE = (K, K, Z)\n",
-    "    x_blocks = A.shape[0] - (K - 1)\n",
-    "    y_blocks = A.shape[1] - (K - 1)\n",
-    "    n_blocks = x_blocks * y_blocks\n",
-    "\n",
-    "    blocks = np.lib.stride_tricks.as_strided(\n",
-    "        A,\n",
-    "        shape = (n_blocks, K, K, Z),\n",
-    "        strides = (\n",
-    "            itemsize*Z,\n",
-    "            itemsize*Z*Y,\n",
-    "            itemsize*Z,\n",
-    "            itemsize\n",
-    "        )\n",
-    "    )\n",
-    "    # flattening kxkxz traces into k^2xz so that central trace will be in center of resulting array\n",
-    "    blocks = blocks.reshape(n_blocks, K*K, Z)\n",
-    "    return blocks, n_blocks, x_blocks, y_blocks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c23a21d2-a41e-4ab3-820e-0bbae198bc6c",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-07-17T08:10:48.618832Z",
-     "iopub.status.busy": "2023-07-17T08:10:48.617481Z",
-     "iopub.status.idle": "2023-07-17T08:10:48.631460Z",
-     "shell.execute_reply": "2023-07-17T08:10:48.629890Z",
-     "shell.execute_reply.started": "2023-07-17T08:10:48.618772Z"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "def mean_corr(A, K):\n",
-    "    X, Y, Z = A.shape\n",
-    "    \n",
-    "    blocks, n_blocks, x_blocks, y_blocks = create_blocks(A, K)\n",
-    "    blocks = blocks.reshape(n_blocks, K*K, Z)\n",
-    "    central_tr = blocks[:, blocks.shape[1]//2, :].reshape(n_blocks, 1, Z)\n",
-    "\n",
-    "    result = ((blocks * central_tr).mean(axis=2) - central_tr.mean(axis=2) * blocks.mean(axis=2)) / (central_tr.std(axis=2) * blocks.std(axis=2))\n",
-    "\n",
-    "    result = (result.sum(axis=1) - 1) / (K**2 - 1)\n",
-    "    return result.reshape((x_blocks, y_blocks))"
+    "A = np.random.randint(-10, 10, size=(X, Y, Z))"
    ]
   },
   {
@@ -5303,37 +5213,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6670b5d6-e225-46d4-a1c0-90fd55449668",
+   "execution_count": 30,
+   "id": "c23a21d2-a41e-4ab3-820e-0bbae198bc6c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-07-17T08:10:50.894061Z",
-     "iopub.status.busy": "2023-07-17T08:10:50.893478Z",
-     "iopub.status.idle": "2023-07-17T08:10:58.393515Z",
-     "shell.execute_reply": "2023-07-17T08:10:58.392525Z",
-     "shell.execute_reply.started": "2023-07-17T08:10:50.894004Z"
+     "iopub.execute_input": "2023-07-20T08:18:48.441355Z",
+     "iopub.status.busy": "2023-07-20T08:18:48.440167Z",
+     "iopub.status.idle": "2023-07-20T08:18:48.453756Z",
+     "shell.execute_reply": "2023-07-20T08:18:48.451941Z",
+     "shell.execute_reply.started": "2023-07-20T08:18:48.441298Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def mean_corr(A, K):\n",
+    "    X, Y, Z = A.shape\n",
+    "    \n",
+    "    blocks = _create_blocks(A, K)\n",
+    "    central_tr = blocks[:, blocks.shape[1]//2, :].reshape(X*Y, 1, Z)\n",
+    "\n",
+    "    result = ((blocks * central_tr).mean(axis=2) - central_tr.mean(axis=2) * blocks.mean(axis=2)) / (central_tr.std(axis=2) * blocks.std(axis=2))\n",
+    "\n",
+    "    result = (result.sum(axis=1) - 1) / (K**2 - 1)\n",
+    "    return result.reshape((X, Y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1ec08b8-5c75-4cdb-8047-39b1a1fedcea",
+   "metadata": {},
+   "source": [
+    "## Timings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "eb0b2e72-b478-473a-b9a5-5b4ce38fbe32",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:17:34.526029Z",
+     "iopub.status.busy": "2023-07-20T08:17:34.525548Z",
+     "iopub.status.idle": "2023-07-20T08:17:51.831945Z",
+     "shell.execute_reply": "2023-07-20T08:17:51.830686Z",
+     "shell.execute_reply.started": "2023-07-20T08:17:34.526004Z"
     },
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.16 s ± 7.64 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
     }
    ],
    "source": [
-    "from Task_from_starters import second_task\n",
-    "\n",
-    "baseline_result = mean_corr(A, K)\n",
-    "my_result = second_task(A, K)\n",
-    "\n",
-    "(baseline_result == my_result).all()"
+    "%%timeit\n",
+    "second_task_v2(A, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "8e38ab3f-c3a5-4afe-a166-9ed1c055f0f8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:17:51.834271Z",
+     "iopub.status.busy": "2023-07-20T08:17:51.833982Z",
+     "iopub.status.idle": "2023-07-20T08:18:12.877324Z",
+     "shell.execute_reply": "2023-07-20T08:18:12.876279Z",
+     "shell.execute_reply.started": "2023-07-20T08:17:51.834242Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.62 s ± 7.26 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "second_task_v1(A, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "36bf2aec-e568-48f1-91e5-f067f82166c0",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:31:20.058450Z",
+     "iopub.status.busy": "2023-07-20T08:31:20.057873Z",
+     "iopub.status.idle": "2023-07-20T08:31:59.750013Z",
+     "shell.execute_reply": "2023-07-20T08:31:59.748899Z",
+     "shell.execute_reply.started": "2023-07-20T08:31:20.058396Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.94 s ± 6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "second_task_numpy(A, K)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "111ff6cc-cd1c-4c3c-a1cf-0337dab527f8",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-07-20T08:19:30.317779Z",
+     "iopub.status.busy": "2023-07-20T08:19:30.317550Z",
+     "iopub.status.idle": "2023-07-20T08:20:18.672466Z",
+     "shell.execute_reply": "2023-07-20T08:20:18.671406Z",
+     "shell.execute_reply.started": "2023-07-20T08:19:30.317759Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.04 s ± 6.05 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "second_task_via_distance(A, K)"
    ]
   }
  ],
